--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <button class="control-button" id="loopBtn">Loop: Off</button>
             <button class="control-button" id="shuffleBtn">Shuffle</button>
             <button class="control-button" id="uploadFolderBtn">Upload Folder</button>
+            <input type="range" id="volumeControl" class="volume-control" min="0" max="1" step="0.1" value="1">
             <input type="file" id="uploadFolder" multiple webkitdirectory directory style="display: none;">
         </div>
 
@@ -133,10 +134,11 @@
         const uploadFolder = document.getElementById('uploadFolder');
         const playlistContainer = document.getElementById('playlist-container');
         const uploadFolderBtn = document.getElementById('uploadFolderBtn');
+        const volumeControl = document.getElementById('volumeControl');
 
-        function isAudioPaused() {
-            return audio.paused;
-        }
+        volumeControl.addEventListener('input', () => {
+            audio.volume = parseFloat(volumeControl.value);
+        });
         function updatePlaylist() {
             playlistContainer.innerHTML = '';
             playlist.forEach((song, index) => {
