added timestamp & search bar took forever btw

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1 style="text-align: center;">Custom Media Player</h1>
     <div id="player-container">
         <div id="time-display">0:00 / 0:00</div>
         <div id="progress-bar-container">
@@ -28,6 +29,7 @@
                 <div id="volume-bar"></div>
             </div>
             <input type="file" id="uploadFolder" multiple webkitdirectory directory style="display: none;">
+
         </div>
 
         <div id="playlist-container"></div>
